--- a/billiejean_miniProject7R/index.html
+++ b/billiejean_miniProject7R/index.html
@@ -17,7 +17,8 @@
     <div class = "wrapPosition">
       <div class = "bkgContent">
         <h1>this.space<h1>
-          <button></button>
+          <button1></button1>
+          <button2></button2>
       </div>
     </div>
   </body>
