--- a/billiejean_projectB/game.html
+++ b/billiejean_projectB/game.html
@@ -44,12 +44,12 @@
     <table>
       <tr>
         <td>
-          <button class="mBtn">Home</button>
+          <a href="index.html"><button class="mBtn">Home</button></a>
         </td>
       </tr>
       <tr>
         <td>
-          <button class="mBtn">Episodes</button>
+          <a href="episodes.html"><button class="mBtn">Episodes</button></a>
         </td>
       </tr>
       <tr>
