--- a/billiejean_projectB/index.html
+++ b/billiejean_projectB/index.html
@@ -18,11 +18,9 @@
             <div class="container">
               <div class="card" onclick="flip(event)">
                 <div class="front">
-                  <h1>This is the front</h1>
-                  <p> Here is some additional text</p>
                 </div>
                 <div class="back">
-                  <h1>This is the back</h1>
+                  <p>Character 1<p>
                 </div>
               </div>
           </div>
@@ -33,11 +31,9 @@
           <div class="container">
             <div class="card"  onclick="flip(event)">
               <div class="front">
-                <h1>This is the front</h1>
-                <p> Here is some additional text</p>
               </div>
               <div class="back">
-                <h1>This is the back</h1>
+                <p>Character 2<p>
               </div>
             </div>
           </div>
@@ -48,11 +44,9 @@
           <div class="container">
             <div class="card" onclick="flip(event)">
               <div class="front">
-                <h1>This is the front</h1>
-                <p> Here is some additional text</p>
               </div>
               <div class="back">
-                <h1>This is the back</h1>
+                <p>Character 3<p>
               </div>
             </div>
           </div>
@@ -63,11 +57,9 @@
           <div class="container">
             <div class="card"  onclick="flip(event)">
               <div class="front">
-                <h1>This is the front</h1>
-                <p> Here is some additional text</p>
               </div>
               <div class="back">
-                <h1>This is the back</h1>
+                <p>Character 4<p>
               </div>
             </div>
           </div>
@@ -81,11 +73,9 @@
           <div class="container">
             <div class="card"  onclick="flip(event)">
               <div class="front">
-                <h1>This is the front</h1>
-                <p> Here is some additional text</p>
               </div>
               <div class="back">
-                <h1>This is the back</h1>
+                <p>Character 5<p>
               </div>
             </div>
           </div>
@@ -95,11 +85,9 @@
           <div class="container">
             <div class="card"  onclick="flip(event)">
               <div class="front">
-                <h1>This is the front</h1>
-                <p> Here is some additional text</p>
               </div>
               <div class="back">
-                <h1>This is the back</h1>
+                <p>Character 6<p>
               </div>
             </div>
           </div>
@@ -110,11 +98,9 @@
           <div class="container">
             <div class="card"  onclick="flip(event)">
               <div class="front">
-                <h1>This is the front</h1>
-                <p> Here is some additional text</p>
               </div>
               <div class="back">
-                <h1>This is the back</h1>
+                <p>Character 7<p>
               </div>
             </div>
           </div>
@@ -125,11 +111,9 @@
           <div class="container">
             <div class="card"  onclick="flip(event)">
               <div class="front">
-                <h1>This is the front</h1>
-                <p> Here is some additional text</p>
               </div>
               <div class="back">
-                <h1>This is the back</h1>
+                <p>Character 8<p>
               </div>
             </div>
           </div>
@@ -137,6 +121,11 @@
       </tr>
     </table>
     <!--- Close Table --->
+
+    <div class="navigation">
+  <button class="btn"><a href="game.html">Start</a></button>
+  <button class="btn"><a href="episodes.html">Episodes</a></button>
+</div>
 
   </body>
 </html>
