commit things yay

--- a/billiejean_projectB/game.html
+++ b/billiejean_projectB/game.html
@@ -40,24 +40,26 @@
 <!-- Menu Dock -->
 
 <div id="mDock">
-  <div class="container">
-    <table>
-      <tr>
-        <td>
-          <a href="index.html"><button class="mBtn">Home</button></a>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <a href="episodes.html"><button class="mBtn">Episodes</button></a>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <button class="mBtn">Journal</button>
-        </td>
-      </tr>
-    </table>
+  <div class="mOuter">
+    <div class="container">
+      <table>
+        <tr>
+          <td>
+            <a href="index.html"><button class="mBtn">Home</button></a>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <a href="episodes.html"><button class="mBtn">Episodes</button></a>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <button class="mBtn">Journal</button>
+          </td>
+        </tr>
+      </table>
+    </div>
   </div>
 </div>
 
