--- a/billiejean_projectB/page1.html
+++ b/billiejean_projectB/page1.html
@@ -1,137 +1,96 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="css/page1.css">
-    <script src="js/lib/p5.js" type="text/javascript"></script>
-    <title></title>
-  </head>
-  <body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="js/lib/p5.js" type="text/javascript"></script>
+  <script defer src="js/page1.js" type="text/javascript"></script>
+  <link href="css/page1.css" rel="stylesheet">
 
-  <header class="page-header">
-    <h1></h1>
-  </header>
+<!--  <script defer src="js/game.js"></script> -->
+  <title>Text Adventure</title>
+</head>
+
+<body>
+
+<canvas></canvas>
+
+<!-- Apartment Dock -->
 
 
-    <script src="js/page1.js" type="text/javascript"></script>
 
-  <!--- Table of Cards --->
+    <!--
+    <table>
+    <tr>
+      <td><div class="aBtn"></div></td>
+      <td><div class="aBtn"></div></td>
+      <td><div class="aBtn"></div></td>
+      <td><div class="aBtn"></div></td>
+    </tr>
+    <tr>
+      <td><div class="aBtn"></div></td>
+      <td><div class="aBtn"></div></td>
+      <td><div class="aBtn"></div></td>
+      <td><div class="aBtn"></div></td>
+    </tr>
+  </table>
+    -->
+
+<!-- Menu Dock -->
+
+<div id="mDock">
+  <div class="mOuter">
+    <div class="container">
       <table>
-        <!--- Row 1 --->
         <tr>
-          <!--- Card 1 --->
           <td>
-            <div class="container">
-              <div class="card" onclick="flip(event)">
-                <div class="front">
-                </div>
-                <div class="back">
-                  <p>Character 1<p>
-                </div>
-              </div>
-          </div>
-        </td>
-
-        <!--- Card 2 --->
-        <td>
-          <div class="container">
-            <div class="card"  onclick="flip(event)">
-              <div class="front">
-              </div>
-              <div class="back">
-                <p>Character 2<p>
-              </div>
-            </div>
-          </div>
-        </td>
-
-        <!--- Card 3 --->
-        <td>
-          <div class="container">
-            <div class="card" onclick="flip(event)">
-              <div class="front">
-              </div>
-              <div class="back">
-                <p>Character 3<p>
-              </div>
-            </div>
-          </div>
-        </td>
-
-        <!--- Card 4 --->
-        <td>
-          <div class="container">
-            <div class="card"  onclick="flip(event)">
-              <div class="front">
-              </div>
-              <div class="back">
-                <p>Character 4<p>
-              </div>
-            </div>
-          </div>
-        </td>
-      </tr>
-
-      <!--- Row 2 --->
-      <tr>
-        <!--- Card 5 --->
-        <td>
-          <div class="container">
-            <div class="card"  onclick="flip(event)">
-              <div class="front">
-              </div>
-              <div class="back">
-                <p>Character 5<p>
-              </div>
-            </div>
-          </div>
-        </td>
-        <!--- Card 6 --->
-        <td>
-          <div class="container">
-            <div class="card"  onclick="flip(event)">
-              <div class="front">
-              </div>
-              <div class="back">
-                <p>Character 6<p>
-              </div>
-            </div>
-          </div>
-        </td>
-
-        <!--- Card 7 --->
-        <td>
-          <div class="container">
-            <div class="card"  onclick="flip(event)">
-              <div class="front">
-              </div>
-              <div class="back">
-                <p>Character 7<p>
-              </div>
-            </div>
-          </div>
-        </td>
-
-        <!--- Card 8 --->
-        <td>
-          <div class="container">
-            <div class="card"  onclick="flip(event)">
-              <div class="front">
-              </div>
-              <div class="back">
-                <p>Character 8<p>
-              </div>
-            </div>
-          </div>
-        </td>
-      </tr>
-    </table>
-    <!--- Close Table --->
-
-    <div class="navigation">
-  <button class="btn"><a href="game.html">Start</a></button>
-  <button class="btn"><a href="episodes.html">Episodes</a></button>
+            <a href="index.html"><button class="mBtn">Home</button></a>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <a href="episodes.html"><button class="mBtn">Episodes</button></a>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <button class="mBtn">Journal</button>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </div>
 </div>
+
+<!-- Text -->
+
+<div class="wrapper">
+  <div class="container">
+    <div id="text">Text</div>
+</div>
+</div>
+
+<!-- Card Dock -->
+
+  <table>
+    <tr>
+      <td>
+        <div id="cDock">
+          <div class="outer">
+            <div class="container">
+              <div id="option-buttons" class="btn-grid" >
+                <button class="btn">Option 1</button>
+                <button class="btn">Option 2</button>
+                <button class="btn">Option 3</button>
+                <button class="btn">Option 4</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </td>
+    </tr>
+  </table>
 
   </body>
 </html>
