--- a/billiejean_projectB/index.html
+++ b/billiejean_projectB/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/index.css">
     <script src="js/lib/p5.js" type="text/javascript"></script>
+    <script defer src="js/index.js" type="text/javascript"></script>
     <title></title>
   </head>
   <body>
 
-    <script src="js/index.js" type="text/javascript"></script>
+
 
 
   <!--- Table of Cards --->
@@ -22,7 +23,8 @@
                 <div class="front">
                 </div>
                 <div class="back">
-                  <p>Character 1<p>
+                  <div class="b1">
+                  </div>
                 </div>
               </div>
           </div>
