--- a/billiejean_final.projectB/page1.html
+++ b/billiejean_final.projectB/page1.html
@@ -15,9 +15,14 @@
   <title>happy neighbor</title>
 </head>
 
-<body>
+<body onmousemove="updateMouse()">
 
 <canvas></canvas>
+
+<div class = "wrapPosition">
+  <div class = "bkgContent">
+  </div>
+</div>
 
 <!-- Apartment Dock -->
 
