still comitting stuff

--- a/billiejean_final.projectB/page1.html
+++ b/billiejean_final.projectB/page1.html
@@ -17,6 +17,11 @@
 
 <body onmousemove="updateMouse()">
 
+<div class="container">
+  <h1>Attention Residents:</h1>
+  <h2>Remember, a complacent neighbor is a happy neighbor!<h2>
+</div>
+
 <canvas></canvas>
 
 <div class = "wrapPosition">
@@ -73,8 +78,8 @@
 
 <!-- Text -->
 
-<div class="wrapper">
-  <div class="container">
+<div id="deck">
+  <div id="display">
     <div id="text">Text</div>
 </div>
 </div>
