commit more stuff

--- a/billiejean_final.projectB/page1.html
+++ b/billiejean_final.projectB/page1.html
@@ -17,10 +17,12 @@
 
 <body onmousemove="updateMouse()">
 
+<!--
 <div class="container">
-  <h1>Attention Residents:</h1>
-  <h2>Remember, a complacent neighbor is a happy neighbor!<h2>
+  <p>Attention Residents:</p>
+  <p>Remember, a complacent neighbor is a happy neighbor!</p>
 </div>
+-->
 
 <canvas></canvas>
 
@@ -63,7 +65,7 @@
         </tr>
         <tr>
           <td>
-            <a href="episodes.html"><button class="mBtn">Episodes</button></a>
+            <button class="mBtn">Episodes</button>
           </td>
         </tr>
         <tr>
